--- a/src/components/Header/Search/style.scss
+++ b/src/components/Header/Search/style.scss
@@ -8,6 +8,7 @@
     border-style: solid;
     border-width: 1px;
     display: flex;
+   
     justify-content: flex-end;  
 
 }
@@ -19,6 +20,7 @@
     line-height: $line-height-text-secondary;
     padding: 11px 16px;
     border: none;
+    outline: none;
     border-radius: 8px;
     
    
